corrected spacing issues and capitalisation

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 ul {
   list-style-type: none;
+  text-transform: capitalize;
 }
 
 .App-logo {
